# LifeWorks-Backend-Developer-Assessment

./: .gitignore  .pre-commit-config.yaml  README.md  Usage.md  companies.py  company.py  main.py  pyproject.toml  read_data.py  requirements.txt  sandbox.py  setup.cfg  task2.json  task_1.py  task_2.py  task_3.py  tasks.py  transformer.py  user.py  users.py
.github/workflows/: actions_with_poetry.yaml  my_actions.yaml  try_poetry.yaml
answers/: task_one.json  task_three.json  task_two.json
assets/: company.json  user.json
tests/: conftest.py  test_companies.py  test_read_data.py  test_users.py
