[tool.poetry]
name = "tech-task"
version = "0.1.0"
description = "Backend assessment"
authors = ["Vilius Kulinas <vilius.kulinas@gmail.com>"]
readme = "README.md"
packages = [{include = "tech_task"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.3"
pytest-cov = "3.0.0"
flake8 = "5.0.4"
isort = "5.10.1"
black = "22.8.0"
mypy = "0.982"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
